<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/as"
    android:orientation="vertical">


    <EditText
        android:id="@+id/searchbarlist"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:drawableLeft="@drawable/ic_back"
        />


    <TextView
        android:id="@+id/texta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/TextColor"
        android:textSize="24dp"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

    </androidx.recyclerview.widget.RecyclerView>


</LinearLayout>