...

    <ImageView
        android:layout_width="341dp"
        android:layout_height="44dp"
        android:layout_gravity="center|center_horizontal"
        android:src="@drawable/searchbar"
        android:id="@+id/searchImg"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Browse all"
        android:textColor="@color/TextColor"
...
