...
    android:layout_height="match_parent"
    android:background="@color/layoutcolor"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity">

       <FrameLayout
           android:id="@+id/frame_fragment"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           />
    <FrameLayout
        android:layout_width="match_parent"
...
