<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/upload_image_layout1"
    android:background="@drawable/media_player_background_color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/upload_image_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/chosen_image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:src="@drawable/default_image"
            android:textStyle="bold" />

        <Button
            android:id="@+id/pick_from_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_button"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="Pick Photo From Gallery"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light" />

        <LinearLayout
            android:id="@+id/upload_image_layout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/upload_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_button"
                android:text="Upload"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/cancel_upload_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="24dp"
                android:background="@drawable/transparent_rounded_button"
                android:text="CANCEL"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>