...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="32dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/library_playlist_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="Create playlist"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/fragment_playlist_library_layout5"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/library_playlist_recycleview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <ProgressBar
                android:id="@+id/library_playlist_progress_bar"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
...
